# GBEmu

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  reform_build.sh  touch.sh
src/gb-app/: CMakeLists.txt  main.cpp
src/gb-app/widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gb-lib/: CMakeLists.txt  Doxyfile  constants.h  defines.h
src/gb-lib/apu/: apu.cpp  apu.h  channel.h  gbchannel1.cpp  gbchannel1.h  gbchannel2.cpp  gbchannel2.h  gbchannel3.cpp  gbchannel3.h  gbchannel4.cpp  gbchannel4.h  gbmixer.cpp  gbmixer.h  iapu.h  ichannel.h  imixer.h
src/gb-lib/cart/: cart.cpp  cart.h  mbc.h  mbc1.cpp  mbc1.h  nombc.cpp  nombc.h
src/gb-lib/cpu/: cpu.cpp  cpu.h  cpu_defines.h  cpuflags.cpp  cpuflags.h  cpuregisters.cpp  cpuregisters.h  flagsview.cpp  flagsview.h  gbregisters.cpp  gbregisters.h  operation.cpp  operation.h  register_flags.h  registerbyte.cpp  registerbyte.h  registername.h  registersinterface.h
src/gb-lib/debug/: simplelocation.cpp  simplelocation.h  variablebyte.cpp  variablebyte.h  variablelocation.cpp  variablelocation.h
src/gb-lib/gb_factories/: apufactory.cpp  apufactory.h  apuregisterfactory.cpp  apuregisterfactory.h  cartloader.cpp  cartloader.h  channelfactory.cpp  channelfactory.h  gb_defines.h  gbfactory.cpp  gbfactory.h  instructionsetbuilder.cpp  instructionsetbuilder.h  mbcbankfactory.cpp  mbcbankfactory.h  memoryfactory.cpp  memoryfactory.h  peripheralregisterfactory.cpp  peripheralregisterfactory.h  ppufactory.cpp  ppufactory.h  ppuregisterfactory.cpp  ppuregisterfactory.h  registerfactory.h
src/gb-lib/input/: joypad.cpp  joypad.h
src/gb-lib/io/: divregister.cpp  divregister.h  fixedmaskioregister.h  iobank.cpp  iobank.h  ioregister.cpp  ioregister.h  iregisteradapter.h
src/gb-lib/location/: bufferbyte.cpp  bufferbyte.h  bufferlocation.cpp  bufferlocation.h  fusedlocation16.cpp  fusedlocation16.h  location.cpp  location.h  location16.h  location8.h  location_defines.h  locationbyte.cpp  locationbyte.h  locationimpl.cpp  locationimpl.h  nullbyte.cpp  nullbyte.h  nulllocation.cpp  nulllocation.h  rambyte.cpp  rambyte.h  ramlocation.cpp  ramlocation.h  register.cpp  register.h  register16.cpp  register16.h  register8.cpp  register8.h  registerbyte.cpp  registerbyte.h  rombyte.cpp  rombyte.h  romlocation.cpp  romlocation.h  variablebyte.cpp  variablebyte.h  variablelocation.cpp  variablelocation.h  zerobyte.cpp  (+3 more)
src/gb-lib/mem/: bufferbank.cpp  bufferbank.h  bytelocationadapter.h  gbmemory.cpp  gbmemory.h  gbmemorymap.cpp  gbmemorymap.h  ilocation16.h  ilocation8.h  imemorymanager.h  imemoryview.h  imemorywordview.h  location16.h  location8.h  mem_defines.h  mem_tools.cpp  mem_tools.h  memoryarea.cpp  memoryarea.h  memorymanifold.cpp  memorymanifold.h  memoryview.h  mirrorbank.cpp  mirrorbank.h  nullbank.cpp  nullbank.h  rambank.cpp  rambank.h  ramlocation.cpp  ramlocation.h  registerbank.cpp  registerbank.h  rombank.cpp  rombank.h  singleareamanager.cpp  singleareamanager.h  wordlocationadapter.h
src/gb-lib/ops/: arithmetic.cpp  arithmetic.h  bitmanip.cpp  bitmanip.h  logic.cpp  logic.h  memory.h  ops.h  shiftrotate.cpp  shiftrotate.h  shiftrotatebitwise.h
src/gb-lib/peripherals/: gbinterrupthandler.cpp  gbinterrupthandler.h  gbtimer.cpp  gbtimer.h  interrupthandler.h  joypad.cpp  joypad.h  oamdma.cpp  oamdma.h  peri_defines.h  peripheral.h  serial.cpp  serial.h  tickable.h
src/gb-lib/ppu/: gbrenderer.cpp  gbrenderer.h  ippu.h  irenderer.h  pixelbuffer.h  ppu.cpp  ppu.h  ppu_constants.h
src/gb-lib/sys/: systemmanager.cpp  systemmanager.h
src/gb-lib/util/: fallingedgedetector.h  helpers.cpp  helpers.h  location.cpp  location.h  locationbyte.cpp  locationbyte.h  locationimpl.cpp  locationimpl.h  nullbyte.cpp  nullbyte.h  ops.cpp  ops.h  util_defines.h
test/: .clang-tidy  CMakeLists.txt  main.cpp
test/gb-doc/: CMakeLists.txt  gbdoc.cpp  gbdoc.sh
test/gbelib_tests/: CMakeLists.txt  divider_tests.cpp  todo.cpp
test/gbelib_tests/apu/: apu_tests.cpp  gbchannel1_tests.cpp  gbchannel2_tests.cpp  gbchannel3_tests.cpp  gbchannel4_tests.cpp  gbmixer_tests.cpp
test/gbelib_tests/cpu/: cpu_tests.cpp  cpuflags_tests.cpp  cpuregisters_tests.cpp  operation_tests.cpp  registerbyte_tests.cpp
test/gbelib_tests/gb/: cartloader_tests.cpp  gbmemoryfactory_tests.cpp
test/gbelib_tests/io/: divregister_tests.cpp
test/gbelib_tests/location/: location_tests.cpp  locationimpl_tests.cpp  nullbyte_tests.cpp  nulllocation_tests.cpp  rambyte_tests.cpp  ramlocation_tests.cpp  register16_tests.cpp  register8_tests.cpp  register_tests.cpp  registerbyte_tests.cpp  rombyte_tests.cpp  romlocation_tests.cpp  variablelocation_tests.cpp  zerobyte_tests.cpp  zerolocation_tests.cpp
test/gbelib_tests/mem/: gbmemory_tests.cpp  location_tests.cpp  memoryarea_tests.cpp  memorymanifold_tests.cpp  memtools_tests.cpp  mirrorbank_tests.cpp  nullbank_tests.cpp  rambank_tests.cpp  ramlocation_tests.cpp  registerbank_tests.cpp  rombank_tests.cpp  romlocation_tests.cpp  variablelocation_tests.cpp  zerobank_tests.cpp  zerolocation_tests.cpp
test/gbelib_tests/mock/: mockbytelocationadapter.h  mockchannel.h  mockdivregister.cpp  mockdivregister.h  mockflags.h  mockinterrupthandler.h  mockiobank.h  mockmixer.h  mockoam.h  mockregisteradapter.h  mockregisters.cpp  mockregisters.h  mockrenderer.h  mocktiledata.cpp  mocktiledata.h  mocktilemap.cpp  mocktilemap.h  testbank.cpp  testbank.h
test/gbelib_tests/ops/: arithmetic_tests.cpp  bitmanip_tests.cpp  logic_tests.cpp  memory_tests.cpp  ops_tests.cpp  shiftrotate_tests.cpp
test/gbelib_tests/peripherals/: gbinterrupthandler_tests.cpp  gbtimer_tests.cpp
test/gbelib_tests/ppu/: gbrenderer_tests.cpp  pixelbuffer_tests.cpp  ppu_tests.cpp
test/gbelib_tests/roms/: cpu_instrs_tests.cpp  instr_timing_tests.cpp  interrupt_time_tests.cpp  mem_timing2_tests.cpp  mem_timing_tests.cpp
test/gbelib_tests/sys/: systemmanager_tests.cpp
test/gbelib_tests/util/: fallingedgedetector_tests.cpp  helpers_tests.cpp  location_tests.cpp  locationimpl_tests.cpp  nullbyte_tests.cpp  ops_tests.cpp
test/res/: .gitignore
(+287 files in other folders)
