cmake_minimum_required(VERSION 3.11)
project(gb-lib C CXX)

include(CheckCXXCompilerFlag)

add_library(gbelib SHARED STATIC)
target_sources(gbelib PRIVATE
  constants.h
  defines.h
  apu/apu.h
  apu/apu.cpp
  apu/channel.h
  apu/gbchannel1.h
  apu/gbchannel1.cpp
  apu/gbchannel2.h
  apu/gbchannel2.cpp
  apu/gbchannel3.h
  apu/gbchannel3.cpp
  apu/gbchannel4.h
  apu/gbchannel4.cpp
  apu/gbmixer.h
  apu/gbmixer.cpp
  apu/iapu.h
  apu/imixer.h
  apu/channel_util/dac.h
  apu/channel_util/dac.cpp
  apu/channel_util/envelope.h
  apu/channel_util/envelope.cpp
  apu/channel_util/framesequencer.h
  apu/channel_util/framesequencer.cpp
  apu/channel_util/gbpulsechannel.h
  apu/channel_util/gbpulsechannel.cpp
  apu/channel_util/length.h
  apu/channel_util/length.cpp
  apu/channel_util/lengthch3.h
  apu/channel_util/lengthch3.cpp
  apu/channel_util/period.h
  apu/channel_util/period.cpp
  apu/channel_util/sweep.h
  apu/channel_util/sweep.cpp
  cart/cart.h
  cart/cart.cpp
  cart/mbc.h
  cart/mbc1.h
  cart/mbc1.cpp
  cart/nombc.h
  cart/nombc.cpp
  cpu/cpu.h
  cpu/cpu.cpp
  cpu/id/baseinstructiondecoder.h
  cpu/id/baseinstructiondecoder.cpp
  cpu/id/basicrotatedecoder.h
  cpu/id/basicrotatedecoder.cpp
  cpu/id/bytearithmeticdecoder.h
  cpu/id/bytearithmeticdecoder.cpp
  cpu/id/byteloadsdecoder.h
  cpu/id/byteloadsdecoder.cpp
  cpu/id/cbdecoder.h
  cpu/id/cbdecoder.cpp
  cpu/id/cbopdecoder.h
  cpu/id/cbopdecoder.cpp
  cpu/id/controldecoder.h
  cpu/id/controldecoder.cpp
  cpu/id/instructiondecoder.h
  cpu/id/jumpscallsdecoder.h
  cpu/id/jumpscallsdecoder.cpp
  cpu/id/opcodeview.h
  cpu/id/opcodeview.cpp
  cpu/id/miscarithmeticdecoder.h
  cpu/id/miscarithmeticdecoder.cpp
  cpu/id/unimplementeddecoder.h
  cpu/id/unimplementeddecoder.cpp
  cpu/id/wordarithmeticdecoder.h
  cpu/id/wordarithmeticdecoder.cpp
  cpu/id/wordloadsdecoder.h
  cpu/id/wordloadsdecoder.cpp
  cpu/operation/basicrotate.h
  cpu/operation/basicrotate.cpp
  cpu/operation/bytealuoperation.h
  cpu/operation/bytealuoperation.cpp
  cpu/operation/byteloadstandard.h
  cpu/operation/byteloadstandard.cpp
  cpu/operation/byteloadindirect.h
  cpu/operation/byteloadindirect.cpp
  cpu/operation/byteloadimmediate.h
  cpu/operation/byteloadimmediate.cpp
  cpu/operation/byteloadoddball.h
  cpu/operation/byteloadoddball.cpp
  cpu/operation/cbprefix.h
  cpu/operation/cbprefix.cpp
  cpu/operation/control.h
  cpu/operation/control.cpp
  cpu/operation/jump.h
  cpu/operation/jump.cpp
  cpu/operation/miscarithmetic.h
  cpu/operation/miscarithmetic.cpp
  cpu/operation/operation.h
  cpu/operation/pushpop.h
  cpu/operation/pushpop.cpp
  cpu/operation/cbop.h
  cpu/operation/cbop.cpp
  cpu/operation/singleop.h
  cpu/operation/wordaluoperation.h
  cpu/operation/wordaluoperation.cpp
  cpu/operation/wordload.h
  cpu/operation/wordload.cpp
  cpu/registers/cpuflags.h
  cpu/registers/cpuflags.cpp
  cpu/registers/cpuregisters.h
  cpu/registers/cpuregisters.cpp
  cpu/registers/flagsview.h
  cpu/registers/registersinterface.h
  cpu/registers/register8.h
  cpu/registers/register8.cpp
  cpu/registers/register16.h
  cpu/registers/register16.cpp
  gb_factories/apufactory.h
  gb_factories/apufactory.cpp
  gb_factories/cartloader.h
  gb_factories/cartloader.cpp
  gb_factories/gbfactory.h
  gb_factories/gbfactory.cpp
  gb_factories/instructionsetbuilder.h
  gb_factories/instructionsetbuilder.cpp
  gb_factories/mbcbankfactory.h
  gb_factories/mbcbankfactory.cpp
  gb_factories/memoryfactory.h
  gb_factories/memoryfactory.cpp
  gb_factories/ppufactory.h
  gb_factories/ppufactory.cpp
  io/iobank.h
  io/iobank.cpp
  io/iregisteradapter.h
  io/divregister.h
  io/divregister.cpp
  io/fixedmaskioregister.h
  io/ioregister.h
  io/ioregister.cpp
  mem/gbmemorymap.h
  mem/gbmemorymap.cpp
  mem/ilocation8.h
  mem/ilocation16.h
  mem/imemoryview.h
  mem/imemorywordview.h
  mem/mem_defines.h


  mem/common/bufferbank.h
  mem/common/bufferlocation.h
  mem/common/bufferlocation.cpp
  mem/common/bytewriterlocation16.h
  mem/common/bytewriterlocation16.cpp
  mem/common/fusedlocation16.h
  mem/common/fusedlocation16.cpp
  mem/common/mem_tools.h
  mem/common/mem_tools.cpp
  mem/common/mirrorbank.h
  mem/common/mirrorbank.cpp
  mem/common/singleareaview.h
  mem/common/singleareaview.cpp
  mem/ram/ramlocation.h
  mem/ram/ramlocation.cpp
  mem/ram/rambank.h
  mem/ram/rambank.cpp
  mem/rest/zerobank.h
  mem/rest/zerobank.cpp
  mem/rest/onelocation.h
  mem/rest/onelocation.cpp
  mem/rest/singleregisterbank.h
  mem/rest/singleregisterbank.cpp
  mem/rest/variablelocation.h
  mem/rest/variablelocation.cpp
  mem/rest/zerolocation.h
  mem/rom/rombank.h
  mem/rom/rombank.cpp
  mem/rom/romlocation.h
  mem/rom/romlocation.cpp
  ops/arithmetic.h
  ops/arithmetic.cpp
  ops/bitmanip.h
  ops/bitmanip.cpp
  ops/logic.h
  ops/logic.cpp
  ops/ops.h
  ops/shiftrotate.h
  ops/shiftrotate.cpp
  peripherals/gbinterrupthandler.h
  peripherals/gbinterrupthandler.cpp
  peripherals/gbtimer.h
  peripherals/gbtimer.cpp
  peripherals/interrupthandler.h
  peripherals/joypad.h
  peripherals/joypad.cpp
  peripherals/oamdma.h
  peripherals/oamdma.cpp
  peripherals/serial.h
  peripherals/serial.cpp
  peripherals/tickable.h
  ppu/ippu.h
  ppu/irenderer.h
  ppu/gbrenderer.h
  ppu/gbrenderer.cpp
  ppu/pixelbuffer.h
  ppu/ppu.h
  ppu/ppu.cpp
  ppu/ppu_constants.h
  ppu/layer/colortransformation.h
  ppu/layer/gbbg.h
  ppu/layer/gbbg.cpp
  ppu/layer/gbobjects.h
  ppu/layer/gbobjects.cpp
  ppu/layer/gbpalette.h
  ppu/layer/gbpalette.cpp
  ppu/layer/gbwindow.h
  ppu/layer/gbwindow.cpp
  ppu/layer/helper.h
  ppu/layer/helper.cpp
  ppu/layer/ilayer.h
  ppu/layer/ibackground.h
  ppu/layer/iobjects.h
  ppu/layer/iwindow.h
  ppu/layer/oam.h
  ppu/layer/oam.cpp
  ppu/layer/object.h
  ppu/layer/object.cpp
  ppu/layer/tile.h
  ppu/layer/tile.cpp
  ppu/layer/tiledata.h
  ppu/layer/tiledata.cpp
  ppu/layer/tilemap.h
  ppu/layer/tilemap.cpp
  sys/systemmanager.cpp
  sys/systemmanager.h
  util/fallingedgedetector.h
  util/helpers.h
  util/helpers.cpp
)

set_target_properties(gbelib PROPERTIES PUBLIC_HEADER "sys/systemmanager.h")
target_include_directories(gbelib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

cxx_20(gbelib)
enable_wall(gbelib)

check_cxx_compiler_flag(-Wstringop-overflow HAVE_STRINGOP_OVERFLOW)
if (HAVE_STRINGOP_OVERFLOW)
  target_compile_options(gbelib PUBLIC -Wno-stringop-overflow)
endif()

clang_format(format_gbelib gbelib)
clang_tidy(gbelib)
cppcheck(gbelib)

build_docs()

install(TARGETS gbelib
  ARCHIVE DESTINATION CMAKE_ARCHIVE_OUTPUT_DIRECTORY
  PUBLIC_HEADER DESTINATION include/gbelib
)
